[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "flake8_typechecking_import"
author = "Adrian Room"
author-email = "ingolemo@gmail.com"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires = ['flake8', 'pytest', 'astpretty']

[tool.flit.entrypoints."flake8.extension"]
TCI = "flake8_typechecking_import:Plugin"
